--- a/base.html
+++ b/base.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Kevin</title>    <link rel="stylesheet" href="styles.css"></head><body>    <header>        <nav>            <div class="container">                <h1>Kevin Johnson</h1>                <ul>                    <li><a href="#about">About</a></li>                    <li><a href="#projects">Projects</a></li>                    <li><a href="#contact">Contact</a></li>                </ul>            </div>        </nav>    </header>    <section id="about">        <div class="container"><h2>
+<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Kevin</title>    <link rel="stylesheet" href="styles.css"></head><body>    <header>        <nav>            <div class="container">                <h1>Kevin Johnson</h1>                <ul>                    <li><a href="#about">About</a></li>                    <li><a href="#projects">Projects</a></li>                    <li><a href="#contact">Contact</a></li>                </ul>            </div>        </nav>    </header>    <section id="projectAbout">        <div class="container"><h2>
     Title
 </h2>
     <img class="main" src="">
-
     Description
-        </div>    </section>
-<section id="contact">        <div class="container">            <h2>Feel free to contact me at:</h2>            <p>                Email: john2003.kjj@gmail.com            </p>        </div>    </section>    <footer>        <div class="container">            <p></p>        </div>    </footer></body></html>
+        <h3>Resources:</h3><ul>
+
+</ul></div></section><section id="contact">        <div class="container">        </div>    </section>    <footer>        <div class="container">            <p>Email: john2003.kjj@gmail.com</p>        </div>    </footer></body></html>
