--- a/Website File Downloader.html
+++ b/Website File Downloader.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Kevin</title>    <link rel="stylesheet" href="styles.css"></head><body>    <header>        <nav>            <div class="container">                <h1>Kevin Johnson</h1>                <ul>                    <li><a href="#about">About</a></li>                    <li><a href="#projects">Projects</a></li>                    <li><a href="#contact">Contact</a></li>                </ul>            </div>        </nav>    </header>    <section id="projectAbout">        <div class="container"><h2>
+<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Kevin</title>    <link rel="stylesheet" href="styles.css"></head><body>    <header>        <nav>            <div class="container">                <h1>Kevin Johnson</h1>                <ul>                    <li><a href="index.html">About</a></li>                    <li><a href="index.html#projects">Projects</a></li>                    <li><a href="contact.html">Contact</a></li>                </ul>            </div>        </nav>    </header>    <section id="projectAbout">        <div class="container"><h2>
 
 Website File Downloader
 </h2>
@@ -23,4 +23,4 @@ Tkinter
 </li><li>
 Urllib
 </li>
-</ul></div></section><section id="contact">        <div class="container">        </div>    </section>    <footer>        <div class="container">            <p>Email: john2003.kjj@gmail.com</p>        </div>    </footer></body></html>
+</ul></div></section>    <footer>        <div class="container">            <p>Email: john2003.kjj@gmail.com</p>        </div>    </footer></body></html>
