small change to the instagram bot project

--- a/Twitter and Instagram Weather Bot for College Station.html
+++ b/Twitter and Instagram Weather Bot for College Station.html
@@ -9,7 +9,9 @@ The Twitter and Instagram Weather Bot is definitely the most complex project I h
 </p><p>
 This python program is run continuosly using a bash script on my raspberry pi that randlomly chooses a number between 25000 and 35000 everytime. This number represents the number of seconds the raspberry pi sleeps till it runs the program again, meaning the whole process is automated. I will provide the links to the respective accounts below:
 </p><p>
-Instagram - https://www.instagram.com/cstatweather/ Twitter - https://twitter.com/cstatweather
+<a href="https://www.instagram.com/cstatweather/> Instagram </a>
+</p><p>
+<a href="https://twitter.com/cstatweather"> Twitter </a>
 </p>
         <h3>Resources:</h3><ul>
 
