--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Kevin</title>    <link rel="stylesheet" href="styles.css"></head><body>    <header>        <nav>            <div class="container">                <h1>Kevin Johnson</h1>                <ul>                    <li><a href="index.html">About</a></li>                    <li><a href="index.html#projects">Projects</a></li>                    <li><a href="#contact">Contact</a></li>                </ul>            </div>        </nav>    </header>    <section id="projectAbout">        <div class="container"><h2>
+<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Kevin</title><script src="script.js"></script>    <link rel="stylesheet" href="styles.css"></head><body>    <header>        <nav>            <div class="container">                <h1>Kevin Johnson</h1>                <ul>                    <li><a href="index.html">About</a></li>                    <li><a href="index.html#projects">Projects</a></li>                    <li><a href="#contact">Contact</a></li>                </ul>            </div>        </nav>    </header>    <section id="projectAbout">        <div class="container"><h2>
     Contact Information
 </h2>
     <img class="main" src="">
     <p>Email: <a href="mailto:john2003.kjj@gmail.com">john2003.kjj@gmail.com</a></p>
     <p>School email: <a href="kjj@tamu.edu">kjj@tamu.edu</a></p>
+    <form id="myForm">
+  <input type="text" id="name" placeholder="Your Name">
+  <input type="email" id="email" placeholder="Your Email">
+  <textarea id="message" placeholder="Your Message"></textarea>
+  <button type="button" onclick="submitForm()">Submit</button>
+</form>
         </div></section><section id="contact">        <div class="container">        </div>    </section>    <footer>        <div class="container">                   </div>    </footer></body></html>
