--- a/staticOut/index.html
+++ b/staticOut/index.html
@@ -7,6 +7,14 @@ I am a Computer Engineering major at Texas A&M University with plenty of experie
 </div>  </section>  <section id="projects">    <div class="container">      <h2>My Projects</h2>
 
 <div class="project-card">
+<img src="Projects/eeeCalc/images/main.png" alt = "eeeCalc"><h3>
+eeeCalc
+</h3><p>
+A python library officially published to PyPi that simplifies some electrical engineering calculations.
+</p><a href="eeeCalc.html">
+View project
+</a>
+</div><div class="project-card">
 <img src="Projects/Website File Downloader/images/main.png" alt = "Website File Downloader"><h3>
 Website File Downloader
 </h3><p>
